--- a/jsapp/calendar/CalendarTester.css
+++ b/jsapp/calendar/CalendarTester.css
@@ -1,3 +1,6 @@
+/*
+	Author: mbr
+*/
 .yui3-skin-sam .yui3-button-color-blue {
   color: #fff;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#599bdc), to(#3476b7));
